<resources>
    <string name="app_name">ExamenDiez</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="animaciones">Animaciones</string>
    <string name="graficos">Gráficos</string>
    <string name="imagen">Imagen</string>
    <string name="audio">Audio</string>
    <string name="video">video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abrir">Abrir</string>
    <string name="capturar">Capturar</string>
    <string name="grabar">Grabar</string>
    <string name="reproducir_audio">Reproducir Audio</string>
    <string name="ningun_achivo_selecionado">Ningun achivo selecionado</string>
    <string name="pausar">Pausar</string>
    <string name="detenerG">Detener Grabación</string>
    <string name="iniciarG">Iniciar Grabación</string>
    <string name="detener_rep">Detener reproducción</string>
    <string name="reproducir">Reproducir</string>
</resources>
