<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innovagenesis.aplicaciones.android.examendiez.fragments.AudioFragment">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:tint="@color/colorAccent"
        android:elevation="30dp"
        app:srcCompat="@drawable/ic_menu_audio"
        android:background="@color/colorGris"
        android:id="@+id/imageView_foto"
        tools:targetApi="lollipop"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ningun_achivo_selecionado"
        android:id="@+id/textAudio"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView_foto"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reproducir_audio"
        android:text="@string/reproducir_audio"
        android:layout_below="@+id/textAudio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/reproducir_audio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/abrir_audio"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/abrir"/>

        <Button
            android:id="@+id/capturar_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grabar" />

    </LinearLayout>


</RelativeLayout>
