<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innovagenesis.aplicaciones.android.examendiez.fragments.CamaraFragment"
    >

    <VideoView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:elevation="30dp"
        android:src="@drawable/ic_menu_video"
        android:id="@+id/videoView_video"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ningun_achivo_selecionado"
        android:id="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/videoView_video"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_margin="17dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/abrir_video"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/abrir"/>

        <Button
            android:id="@+id/capturar_video"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/capturar"/>

    </LinearLayout>


</RelativeLayout>